# fastapi-postgis

./: Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  farm.env  pyproject.toml
.github/workflows/: build-and-test.yml
alembic/: env.py
alembic/versions/: 20240425_1140_df8741484c32_add_first_model.py  20240502_1021_669b300b5f3c_add_computed_area_column.py  20240502_1024_af5453ca27cd_add_computed_perimeter_column.py
app/: config.py  database.py  main.py
app/api/: farm.py
app/models/: __init__.py  base.py  farm.py
app/schemas/: farm.py
db/: Dockerfile  create.sql
tests/: conftest.py  test_farm_api.py
