[tool.poetry]
name = "fastapi-postgis"
version = "0.0.1"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
pydantic = {version = "^2.7.0", extras = ["email"]}
httpx = "^0.27.0"
pytest = "^8.1.1"
gunicorn = "^21.2.0"
rich = "^13.7.0"
sqlalchemy-json = "^0.7.0"
geoalchemy2 = {version = "^0.14.7", extras = ["shapely"]}
geojson-pydantic = "^1.0.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
inline-snapshot = "^0.8.1"
dirty-equals = "^0.7.1.post0"
polyfactory = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
