[tool.poetry]
name = "fastapi-postgis"
version = "0.0.1"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"
httptools = "^0.6.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.3"
pydantic = {version = "^2.7.4", extras = ["email"]}
httpx = "^0.27.0"
pytest = "^8.2.2"
rich = "^13.7.0"
sqlalchemy-json = "^0.7.0"
geoalchemy2 = {version = "^0.15.1", extras = ["shapely"]}
geojson-pydantic = "^1.1.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
inline-snapshot = "^0.10.2"
dirty-equals = "^0.7.1.post0"
polyfactory = "^2.16.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
